--- a/src/OrderItemsReserver/OrderItemsReserver.csproj
+++ b/src/OrderItemsReserver/OrderItemsReserver.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.CosmosDB" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ApplicationCore\ApplicationCore.csproj" />
